refactor: publish,topics and session with delete
